kubernetes/goupfile-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: goupfile
  name: goupfile
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  selector:
    io.kompose.service: goupfile
status:
  loadBalancer: {}
